server/zanata-frontend/src/app/editor/containers/Root/index.css
/* ... */
.modal-backdrop.in {
  filter: alpha(opacity=50);
  opacity: 0.5;
}

.modal-header {
  border-bottom: 0;
  padding: 15px;
}

.modal-header .close {
  margin-top: -2px;
  opacity: 0.7;
}

.modal-title {
  font-size: 1.725rem;
  font-weight: 400;
  line-height: 1.333rem;
  margin: 0;
  text-align: center;
}

.modal-body {
  color: #333;
  padding: 2rem;
  position: relative;
}

.modal-body .scrollable {
  overflow: auto;
  overflow-x: hidden;
}

.modal-body label {
  margin-bottom: 0;
}

.modal-body .checkbox {
  margin: 0;
}

.modal-footer {
  background: rgba(0, 0, 0, .05);
  border-top: 0;
  padding: 1rem;
  right: 0;
  text-align: right;
}

.modal-footer .btn + .btn {
  margin-bottom: 0;
  margin-left: 0.75rem;
}

.modal-footer .btn-group .btn + .btn {
  margin-left: -1px;
}

.modal-footer .btn-block + .btn-block {
  margin-left: 0;
}

.modal-scrollbar-measure {
  height: 50px;
  overflow: scroll;
  position: absolute;
  top: -9999px;
  width: 50px;
}

h4.modal-title {
  color: var(--Editor-color-bright);
  font-size: 1.728rem;
  font-weight: 300;
  line-height: 1rem;
  text-align: center;
}

.label {
  color: #fff;
  border-radius: var(--Editor-border-radius-small);
  padding: 0.21429rem 0.42857rem;
}

.panel-body h3 {
  font-size: 1.2rem;
  font-weight: 500;
}

.TransUnit-panelFooter .ButtonGroup-item .EditorDropdown-toggle {
  margin-left: -0.5rem;
}

.listInline li {
  display: inline-flex;
}

.modal-body .list-group-item-heading {
  color: var(--Editor-color-dark);
  margin-top: 0.5rem;
}

.panel-body .modal-term {
  color: var(--Editor-color-dark);
  font-size: 1.1rem;
  line-height: 2rem;
}

.row span.s1, .row span.s0, .row span.n1 {
  vertical-align: sub;
}

.btn-group-xs > .btn, .btn-xs {
  border-radius: 3px;
  font-size: 12px;
  line-height: 1.5;
  padding: 1px 5px;
}

.EditorInputGroup-addon.btn-xs.advsearch {
  vertical-align: middle;
}

.controlHeader-right {
  padding-top: 0.15rem;
}

.controlHeader-left {
  line-height: 1.95rem;
}

.Editor-mainNav .Dropdown-toggleIcon {
  vertical-align: middle;
}

.icon-history svg, .icon-comment svg {
  vertical-align: sub;
}

.CommentBox {
  margin-top: 1rem;
}

.CommentBox li {
  color: var(--Editor-color-dark);
}

.icon-comment svg {
  fill: var(--Editor-color-light) !important;
}

ul.listInline li.s1 {
  margin-right: 0.375rem;
}

ul.Source-infoList {
  color: #333;
}

/* Icon sizes */

.n2, .n2 svg {
  height: 0.694rem;
  width: 0.694rem;
}

.n1, .n1 svg {
  height: 0.833rem;
  width: 0.833rem;
}

.s0, .s0 svg {
  height: 1rem;
  width: 1rem;
}

.s1, .s1 svg {
  height: 1.2rem;
  width: 1.2rem;
}

.s2, .s2 svg {
  height: 1.44rem;
  width: 1.44rem;
}

.s3, .s3 svg {
  height: 1.728rem;
  width: 1.728rem;
}

.s4, .s4 svg {
  height: 2.074rem;
  width: 2.074rem;
}

.s5, .s5 svg {
  height: 2.488rem;
  width: 2.488rem;
}

.s6, .s6 svg {
  height: 2.986rem;
  width: 2.986rem;
}

.s7, .s7 svg {
  height: 3.583rem;
  width: 3.583rem;
}

.s8, .s8 svg {
  height: 4.3rem;
  width: 4.3rem;
}

.s9, .s9 svg {
  height: 5.16rem;
  width: 5.16rem;
}

.s10, .s10 svg {
  height: 6.192rem;
  width: 6.192rem;
}

nav.flex.flex-wrapper {
  align-items: stretch;
  flex-wrap: wrap;
}

.nav {
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
}

.nav > li {
  display: block;
  position: relative;
}

.nav > li > a {
  color: var(--Editor-color-dark);
  display: block;
  padding: 10px 15px;
  position: relative;
}

.nav > li > a:hover,
.nav > li > a:focus {
  background-color: #eee;
  text-decoration: none;
}

.nav .open > a,
.nav .open > a:hover,
.nav .open > a:focus {
  background-color: #eee;
  border-color: #337ab7;
}

.nav .nav-divider {
  background-color: #e5e5e5;
  height: 1px;
  margin: 9px 0;
  overflow: hidden;
}

.nav > li > a > img {
  max-width: none;
}

.nav-tabs {
  border-bottom: 1px solid #ddd;
}

.nav-tabs > li {
  float: left;
  margin-bottom: -1px;
}

.nav-tabs > li > a {
  background-color: #bcd4dc;
  border: 1px solid transparent;
  border-radius: 4px 4px 0 0;
  line-height: 1.42857143;
}

.nav-tabs > li > a:hover {
  border-color: #eee #eee #ddd;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover,
.nav-tabs > li.active > a:focus {
  background-color: #fff;
  border: 1px solid #ddd;
  border-bottom-color: transparent;
  color: #20718a;
  cursor: default;
}

ul.u-listInline li .u-textSuccess, ul.u-listInline li .u-textSecondary,
ul.u-listInline li .u-textHighlight {
  width: 120%;
}

/* bootstrap override */
:focus, button:focus {
  outline: none;
}

ul.u-listInline li .u-textSuccess {
  width: 120%;
}

ul.u-listInline li .u-textHighlight {
  width: 120%;
}

.tab-content > .tab-pane {
  display: none;
}

.tab-content > .active {
  background: #fff;
  display: block;
  height: 100vh;
}

.tab-pane #tab1, .tab-pane #tab2 {
  margin-top: 2.7rem;
}

.nav-tabs .dropdown-menu {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  margin-top: -1px;
}

.u-pullRight {
  float: right !important;
}

.modal-header .close {
  float: right;
}

.flex {
  align-items: center;
  display: flex;
  flex-direction: row;
}

.flex ul.u-listHorizontal {
  z-index: 1000;
}

.ControlHeader-background {
  background-color: #fff;
}

.Header {
  z-index: var(--Editor-suggestions-header-z-index);
}

table {
  border: none;
}

button.close {
  border: 0;
  color: #f00;
  font-weight: 700;
  line-height: 1;
  outline: none;
  padding: 0.75rem;
  position: absolute;
  right: 1rem;
  top: 0rem;
  z-index: 1;
}

button.close:focus, button.close:hover, button.close:active:focus {
  background-color: #fff;
  box-shadow: none;
  color: #000;
  cursor: pointer;
  filter: alpha(opacity=50);
  opacity: 0.5;
  outline: none;
  text-decoration: none;
}

/* uses bootstrap class for modal close button*/

.iconClose svg {
  color: #f00;
  height: 1rem;
  opacity: 0.7;
  text-align: center;
  width: 1rem;
}

.TransIndicator {
  vertical-align: super;
}

label span.n1 {
  vertical-align: middle !important;
}
/* ... */

